Fixed Quick Jump fab on Class Overview

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,12 +34,16 @@ li{
 }
 
 a{
-  text-decoration: none !important;
-  color: #04AEE7 !important;
+  text-decoration: none;
+  color: #04AEE7;
 }
 
 a:focus{
   outline: none;
+}
+
+a:hover{
+  color: #04AEE7;
 }
 
 footer{
